Upated "competencias" section

--- a/index.html
+++ b/index.html
@@ -59,27 +59,30 @@
   <table cellspacing="10">
     <tr>
       <td>HTML</td>
-      <td>★★★☆☆</td>
     </tr>
     <tr>
       <td>CSS</td>
-      <td>★★☆☆☆</td>
     </tr>
     <tr>
       <td>Javascript</td>
-      <td>★☆☆☆☆</td>
+    </tr>
+    <tr>
+      <td>Bootstrap</td>
+    </tr>
+    <tr>
+      <td>jQuery</td>
+    </tr>
+    <tr>
+      <td>Node Js</td>
     </tr>
     <tr>
       <td>Java</td>
-      <td>★★☆☆☆</td>
     </tr>
     <tr>
-      <td>Python</td>
-      <td>★☆☆☆☆</td>
+      <td>VB / C#</td>
     </tr>
     <tr>
       <td>SQL Server</td>
-      <td>★☆☆☆☆</td>
     </tr>
   </table>
   <hr>
